2014-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/CheckDump.pm: Set severity on Message.

2014-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Use g_strdup.

2014-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Output message for selfcheck
	* client-src/client_util.c (backup_support_option): Parse
	  "MESSAGE-JSON".
	* client-src/client_util.h (backup_support_option_s): Add message_json.
	* client-src/selfcheck.c: Parse message from application.
	* common-src/ammessage.c: Add amgtar message.
	* perl/Amanda/Extract.pm (BSU): parse message-json
	* perl/Amanda/Message.pm: Add amgtar message (3700000).
	* server-src/amcheck.c: Remove unused code, small cleanup.
	* installcheck/Installcheck/Application.pm (selfcheck_message):
	  execute application selfcheck with '--message json'.
	* installcheck/amgtar.pl: Call selfcheck_message.

2014-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.h: #ifndef AMMESSAGE_H

2014-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c: Do not use g_ptr_array_new_full.
	* server-src/amcheck.c: g_ptr_array_free(message_array, TRUE);

2014-10-14  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c (rfc3339_date): Use full_write and fill_read.

2014-10-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.c: Add fe_selfcheck_message.
	* common-src/amfeatures.h: Add fe_selfcheck_message.
	* client-src/client_util.c (check_access_message, check_file_message,
	  check_dir_message, check_suid_message): New function that return a
	  message_t.
	* client-src/client_util.h: Add prototype.
	* client-src/selfcheck.c: Return message to server.
	* common-src/ammessage.c: Many improvement.
	* common-src/ammessage.c (delete_message_gpointer,
	  get_quoted_message, message_get_code, message_get_severity,
	  message_get_argument, message_add_argument, parse_json_message):
	  New function.