@@ -1,3 +1,8 @@
+2014-10-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* client-src/selfcheck.c: Fix compilation if SAMBA_CLIENT is not
+	  defined.
+	* common-src/ammessage.c: Add Message 3600087.
+
 2014-10-15  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/CheckDump.pm: Set severity on Message.
 
